# agentloop

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
src/agentloop/: __init__.py  cli.py  config.py  engine.py  policy.py  providers.py  sandbox.py
